--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EBAC Tech Talks</title>
     <link rel="stylesheet" href="../dist/styles/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em 30d 17h 20m 35s
+                O maior evento de tecnologia do Brasil começa em <span id="contador"></span>
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localização</b>
+                        Allianz Parque, São Paulo - SP
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Preço</b>
+                        A partir de R$ 99,00
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Data</b>
+                        13/02/2026 às 12hrs
+                    </li>
+                </ul>
+                <a href="" class="button button--primary">
+                    Garanta sua vaga
+                </a>
+            </div>
         </div>
     </header>
 
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-End</h2>
+                <p class="event__details__description">Desenvolva interfaces modernas e interativas com HTML, CSS e JavaScript.</p>
+            </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        </div>
+    </section>
+    <section class="event event--ui-ux event--image-left" >
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">UI/UX</h2>
+                <p class="event__details__description">Desenvolva interfaces modernas e interativas com HTML, CSS e JavaScript.</p>
+            </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Data Science</h2>
+                <p class="event__details__description">Analise dados e desenvolva soluções de machine learning com Python e R.</p>
+            </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        </div>
+    </section>
+    <section class="event event--backend  event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Back-End</h2>
+                <p class="event__details__description">Implemente APIs robustas e escaláveis com Node.js, Python e Java.</p>
+            </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        </div>
+    </section>
 
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
